--- a/work/app/index.html
+++ b/work/app/index.html
@@ -3,25 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bilioteca - Vanguard</title>
+    <title>Biblioteca - Vanguard</title>
 
-    <link rel="stylesheet" type="text/css" href="style/adicionar_livro.css">
+    <link rel="stylesheet" type="text/css" href="style/style_livros.css">
     
 </head>
 <body>
-    <h2>Adicionar Livro</h2>
-
-    <form action="/process_forms/AddBook.php" method="post">
-        <label for="titulo">Título:</label>
-        <input type="text" id="titulo" name="titulo" required><br>
-
-        <label for="autor">Autor:</label>
-        <input type="text" id="autor" name="autor" required><br>
-
-        <label for="ano">Ano de Publicação:</label>
-        <input type="number" id="ano" name="ano" required><br>
-
-        <input type="submit" value="Adicionar Livro">
+    <h2>Livros</h2>
+    <form>
+        <label>Adicionar Livro <a href="view/formAddBook.html">+</a></label><br>
+        <label>Retirar Livro <a href="view/formDelBook.html">+</a></label>
+        <label>Alterar Livro <a href="view/formUptadeBook.html">+</a></label>
+        <label>Visualizar Livro <a href="view/formReadBook.html">+</a></label>
     </form>
 </body>
 </html>
